# 2D_SDLGameEngine

./: CMakeLists.txt  README.md
src/: AssetManager.cpp  AssetManager.h  Game.cpp  Game.h  GameObject.cpp  GameObject.h  Map.cpp  Map.h  TextureManager.cpp  TextureManager.h  Vector2D.cpp  Vector2D.h  main.cpp
src/ECS/: Animation.h  ColliderComponent.h  Collision.cpp  Collision.h  Components.h  ECS.h  EntityComponentSystem.h  KeyboardController.cpp  KeyboardController.h  PositionComponent.h  ProjectileComponent.h  SpriteComponent.h  TextureManager.h  TileComponent.h  TransformComponent.h  UILabel.h
